# scoundrel-core

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  USAGE.md
.github/workflows/: ci.yml
assets/locales/: en.json  es.json  pt.json
src/: AuthManager.h  BillingManager.h  DefaultGameContextFactory.h  DefaultGameLogic.cpp  DefaultGameLogic.h  ExtendedGameLogic.cpp  ExtendedGameLogic.h  GameContextFactory.h  GameLogic.cpp  GameLogic.h  LeaderboardManager.h  NullBillingManager.h  PersistenceManager.h  PlayerClassFactory.h  PurchaseRegistry.cpp  PurchaseRegistry.h  concepts.h  gamecontext.cpp  gamecontext.h
src/actions/: AttachWeaponAction.cpp  AttachWeaponAction.h  AttackMonsterAction.cpp  AttackMonsterAction.h  AttackMonsterNoWeaponAction.cpp  AttackMonsterNoWeaponAction.h  BanishMonsterAction.cpp  BanishMonsterAction.h  DrinkPotionAction.cpp  DrinkPotionAction.h  NewRoomAction.cpp  NewRoomAction.h  SkipRoomAction.cpp  SkipRoomAction.h  action.h
src/assets/: Passives.cpp  Passives.h  cards.cpp  cards.h  dungeon.cpp  dungeon.h  graveyard.cpp  graveyard.h  passive_ability.h  player.cpp  player.h  room.cpp  room.h
src/classes/: HealerClass.h  PeasantClass.h  WarriorClass.h  WizardClass.h  playerclass.h
src/i18n/: LocalizationManager.cpp  LocalizationManager.h
src/ui/: AuthManager.h  UserInterface.h
tests/: ActionTests.cpp  CMakeLists.txt  CaptainTests.cpp  CombatTests.cpp  GameLoopTests.cpp  LeaderboardTests.cpp  LocalizationTests.cpp  MockUI.h  PassiveTests.cpp  PlayerLocalizationTests.cpp  TestGameLogic.h  TutorialLocalizationTests.cpp  WizardTests.cpp
